samples/_failures_safe/1761629643_835de8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f261454e.c: In function ‘pointcloud_compute_stats’:
./samples/SAFE/__tmp_f261454e.c:141:20: error: expected declaration or statement at end of input
  141 |             struct Statistics invalid_stats = {0};
      |                    ^~~~~~~~~~
./samples/SAFE/__tmp_f261454e.c:141:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f261454e.c:141:20: error: expected declaration or statement at end of input
